--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         
 <H3>Latest Posts.</H3>
 
-<div id="content"></div>
+<div id="content">
+    
+</div>
 
 
 <!-- Compiled and minified JavaScript -->
