--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       console.log(obj);
 
       document.getElementById("Loader").style = "display:none";
-
+var res = "";
       
      obj.forEach((i) => { 
 
