--- a/resolve.html
+++ b/resolve.html
@@ -110,13 +110,36 @@
 
                 http.onreadystatechange = function () {//Call a function when the state changes.
                     if (http.readyState == 4 && http.status == 200) {
-                        alert(http.responseText);
+                        // alert(http.responseText);
+
+                        const parser = new DOMParser();
+                        var doc = parser.parseFromString(http.responseText, "text/html");
+                        var http = new XMLHttpRequest();
+
+                        const formData = new FormData(doc.getElementsByTagName("form")[0]);
+                        const data = [...formData.entries()];
+                        const asString = data
+                            .map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`)
+                            .join('&');
+
+
+                        var params = asString;
+                        //2nd post
+                        http.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+                        http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                        http.onreadystatechange = function () {
+                            //2nd time
+                            if (http.readyState == 4 && http.status == 200) {
+                              alert(http.responseText);
+                              document.getElementById("Loader").style = "display:none!important";
+                            }
+                        }
+                        http.send(params);
                     }
                 }
                 http.send(params);
 
 
-                document.getElementById("Loader").style = "display:none!important";
 
 
                 // var res = "";
