--- a/resolve.html
+++ b/resolve.html
@@ -114,7 +114,7 @@
 
                         const parser = new DOMParser();
                         var doc = parser.parseFromString(http.responseText, "text/html");
-                        var http = new XMLHttpRequest();
+                        var http2 = new XMLHttpRequest();
 
                         const formData = new FormData(doc.getElementsByTagName("form")[0]);
                         const data = [...formData.entries()];
@@ -125,12 +125,12 @@
 
                         var params = asString;
                         //2nd post
-                        http.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
-                        http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-                        http.onreadystatechange = function () {
+                        http2.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+                        http2.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                        http2.onreadystatechange = function () {
                             //2nd time
-                            if (http.readyState == 4 && http.status == 200) {
-                              alert(http.responseText);
+                            if (http2.readyState == 4 && http2.status == 200) {
+                              alert(http2.responseText);
                               document.getElementById("Loader").style = "display:none!important";
                             }
                         }
