--- a/resolve.html
+++ b/resolve.html
@@ -128,13 +128,36 @@
                         http2.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
                         http2.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
                         http2.onreadystatechange = function () {
-                            //2nd time
+                            //3nd time
                             if (http2.readyState == 4 && http2.status == 200) {
-                              alert(http2.responseText);
-                              document.getElementById("Loader").style = "display:none!important";
+                                const parser = new DOMParser();
+                                var doc = parser.parseFromString(http2.responseText, "text/html");
+                                var http3 = new XMLHttpRequest();
+
+                                const formData = new FormData(doc.getElementsByTagName("form")[0]);
+                                const data = [...formData.entries()];
+                                const asString = data
+                                    .map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`)
+                                    .join('&');
+
+
+                                var params = asString;
+                                //3nd post
+                                http3.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+                                http3.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                                http3.onreadystatechange = function () {
+                                    //3nd time
+                                    if (http3.readyState == 4 && http3.status == 200) {
+                                      document.getElementById("Loader").style.display = "none";
+                                    }
+                                }
+
+
+                                http3.send(params);
+
                             }
                         }
-                        http.send(params);
+                        http2.send(params);
                     }
                 }
                 http.send(params);
