--- a/resolve.html
+++ b/resolve.html
@@ -130,30 +130,32 @@
                         http2.onreadystatechange = function () {
                             //3nd time
                             if (http2.readyState == 4 && http2.status == 200) {
-                                const parser = new DOMParser();
-                                var doc = parser.parseFromString(http2.responseText, "text/html");
-                                var http3 = new XMLHttpRequest();
 
-                                const formData = new FormData(doc.getElementsByTagName("form")[1]);
-                                const data = [...formData.entries()];
-                                const asString = data
-                                    .map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`)
-                                    .join('&');
+                                console.log(http2.responseText)
+                                // const parser = new DOMParser();
+                                // var doc = parser.parseFromString(http2.responseText, "text/html");
+                                // var http3 = new XMLHttpRequest();
 
-
-                                var params = asString;
-                                //3nd post
-                                http3.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
-                                http3.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-                                http3.onreadystatechange = function () {
-                                    //3nd time
-                                    if (http3.readyState == 4 && http3.status == 200) {
-                                      document.getElementById("Loader").style.display = "none";
-                                    }
-                                }
+                                // const formData = new FormData(doc.getElementsByTagName("form")[1]);
+                                // const data = [...formData.entries()];
+                                // const asString = data
+                                //     .map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`)
+                                //     .join('&');
 
 
-                                http3.send(params);
+                                // var params = asString;
+                                // //3nd post
+                                // http3.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+                                // http3.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                                // http3.onreadystatechange = function () {
+                                //     //3nd time
+                                //     if (http3.readyState == 4 && http3.status == 200) {
+                                //       document.getElementById("Loader").style.display = "none";
+                                //     }
+                                // }
+
+
+                                // http3.send(params);
 
                             }
                         }
