--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
           }
 
           doc.documentElement.style.width = "100%";
+          doc.documentElement.style.backgroundColor = "black";
           document.getElementById('mainContent').appendChild(doc.documentElement);
           document.getElementById('mainContent').innerHTML = res + document.getElementById('mainContent').innerHTML;
 
