--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           console.log(obj);
 
           document.getElementById("Loader").style = "display:none!important";
-          var res = "<button class='btn btn-primary' onClick='initAgain()'>Go Back</button><div style='background-color: rgba(0,0,0,0.9);color: white;' id='postID'></div>";
+          var res = "<button class='btn btn-primary' onClick='initAgain()'>Go Back</button>";
 
           obj = obj.result[0].innerHTML;
 
@@ -291,16 +291,6 @@
 
           document.getElementById("Loader").style = "display:none!important";
           // var res = "";
-
-
-
-          //specific
-          var ps = doc.getElementsByTagName('p');
-          ps[0].remove();
-          ps[1].remove();
-
-          doc.getElementsByClassName('imdb_container')[0].remove;
-          //specific
 
 
 
@@ -316,11 +306,20 @@
 
           doc.documentElement.style.width = "100%";
 
+          doc.body.style.backgroundColor = "black";
+          doc.body.style.color = "white";
+          
 
-          document.getElementById('mainContent').innerHTML = res;
+          document.getElementById('mainContent').appendChild(doc.documentElement);
+          document.getElementById('mainContent').innerHTML = res + document.getElementById('mainContent').innerHTML;
 
+          //specific
+          var ps = document.getElementsByTagName('p');
+          ps[0].remove();
+          ps[1].remove();
 
-          document.getElementById('postID').appendChild(doc.documentElement);
+          document.getElementsByClassName('imdb_container')[0].remove();
+          //specific
 
         }
 
