--- a/resolve.html
+++ b/resolve.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>TamilMV Site</title>
+    <title>RESOLVE Site</title>
     <!-- MDB icon -->
     <link rel="icon" href="https://vegamovies.pages.dev/img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -15,6 +15,11 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
     <!-- MDB -->
     <link rel="stylesheet" href="https://vegamovies.pages.dev/css/mdb.min.css" />
+
+    <script type='text/javascript' src='https://soraserver.themesia.com/wp-includes/js/jquery/jquery.min.js?ver=3.6.0' id='jquery-core-js'></script>
+    <script type='text/javascript' src='https://soraserver.themesia.com/wp-includes/js/jquery/jquery-migrate.min.js?ver=3.3.2' id='jquery-migrate-js'></script>
+
+
 </head>
 
 <body>
