--- a/index.html
+++ b/index.html
@@ -306,6 +306,12 @@
             a[c].style.height = "auto";
           }
 
+          var a = doc.getElementsByTagName("a");
+
+          for (c = 0; c < a.length; c++) {
+            a[c].href = "/resolve.html?url=" + encodeURIComponent(a[c].href);
+          }
+
           doc.documentElement.style.width = "100%";
 
           document.getElementById('mainContent').style.backgroundColor = "black";
