--- a/resolve.html
+++ b/resolve.html
@@ -149,7 +149,7 @@
                                         
                                         eval(a[c].innerText);
                                     }catch(es){
-                                        console.log(ex,"EXPECTION IN SCROPT no "+(c+1))
+                                        console.log(es,"EXPECTION IN SCROPT no "+(c+1))
                                     }
                                 }
 
