--- a/resolve.html
+++ b/resolve.html
@@ -173,8 +173,9 @@
                             `;
 
 
-                                document.getElementById('mainContent').innerHTML = res;
+                                document.write(res);
 
+                                document.getElementById("Loader").style = "display:none!important";
 
                             }
                         }
