--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
           var a = doc.getElementsByTagName("a");
 
           for (c = 0; c < a.length; c++) {
+            a[c].target = "";
             a[c].href = "javascript:loadURL('" + a[c].href + "');";
           }
 
