--- a/index.html
+++ b/index.html
@@ -346,6 +346,45 @@
 
         if (response.status == 200) {
           console.log(response.responseText);
+          var obj = JSON.parse(response.responseText);
+
+          console.log(obj);
+          obj = obj.result[0].innerHTML;
+
+          const parser = new DOMParser();
+          var doc = parser.parseFromString(obj, "text/html");
+
+          var a = doc.getElementsByTagName("input");
+
+
+          var post_url = doc.getElementsByTagName("form")[0].action;
+
+          var http = new XMLHttpRequest();
+
+          const formData = new FormData(doc.getElementsByTagName("form")[0]);
+          const data = [...formData.entries()];
+          const asString = data
+            .map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`)
+            .join('&');
+
+
+          var params = asString;
+          http.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+
+          //Send the proper header information along with the request
+          http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+
+          http.onreadystatechange = function () {//Call a function when the state changes.
+            if (http.readyState == 4 && http.status == 200) {
+              const parser = new DOMParser();
+              var doc = parser.parseFromString(http.responseText, "text/html");
+              doc.getElementsByTagName("form")[1].submit();
+            }
+          }
+
+          http.send(params);
+
+
         }
 
       });
