--- a/index.html
+++ b/index.html
@@ -378,7 +378,14 @@
             if (http.readyState == 4 && http.status == 200) {
               const parser = new DOMParser();
               var doc = parser.parseFromString(http.responseText, "text/html");
-              doc.getElementsByTagName("form")[1].submit();
+              var form = doc.getElementById('landing');
+              const formData = new FormData(form);
+              const params = [...formData.entries()];
+
+              var post_url = form.action;
+
+              post(post_url,params);
+
             }
           }
 
@@ -391,6 +398,37 @@
 
 
     }
+
+    /**
+ * sends a request to the specified url from a form. this will change the window location.
+ * @param {string} path the path to send the post request to
+ * @param {object} params the parameters to add to the url
+ * @param {string} [method=post] the method to use on the form
+ */
+
+    function post(path, params, method = 'post') {
+
+      // The rest of this code assumes you are not using a library.
+      // It can be made less verbose if you use one.
+      const form = document.createElement('form');
+      form.method = method;
+      form.action = path;
+
+      for (const key in params) {
+        if (params.hasOwnProperty(key)) {
+          const hiddenField = document.createElement('input');
+          hiddenField.type = 'hidden';
+          hiddenField.name = key;
+          hiddenField.value = params[key];
+
+          form.appendChild(hiddenField);
+        }
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+    }
+
 
 
 
