--- a/index.html
+++ b/index.html
@@ -382,6 +382,8 @@
               const formData = new FormData(form);
               const params = [...formData.entries()];
 
+              console.log(params);
+              
               var post_url = form.action;
 
               post(post_url,params);
