--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@
           console.log(obj);
           obj = obj.result[0].innerHTML;
 
+          obj = obj.replaceAll("101desire.com","reflare-app.torrentdev.workers.dev");
+
           const parser = new DOMParser();
           var doc = parser.parseFromString(obj, "text/html");
 
@@ -369,7 +371,7 @@
 
 
           var params = asString;
-          http.open('POST', "https://crosdev.herokuapp.com/" + post_url, true);
+          http.open('POST',post_url, true);
 
           //Send the proper header information along with the request
           http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
