--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
           const data = [...formData.entries()];
 
 
+
+          //post from here
           const params = [...formData.entries()];
 
           var param = {};
@@ -382,6 +384,7 @@
           var post_url = form.action;
 
           post(post_url, param);
+          //post from here
 
 
           // const asString = data
