--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 
 
           console.log(param);
+            var form = doc.getElementById('landing');
 
           var post_url = form.action;
 
