--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
             a[c].style.height = "auto";
           }
 
-          var a = doc.getElementsByTagName("a");
+          // var a = doc.getElementsByTagName("a");
 
-          for (c = 0; c < a.length; c++) {
-            a[c].target = "";
-            a[c].href = "javascript:loadURL('" + a[c].href + "');";
-          }
+          // for (c = 0; c < a.length; c++) {
+          //   a[c].target = "";
+          //   a[c].href = "javascript:loadURL('" + a[c].href + "');";
+          // }
 
           doc.documentElement.style.width = "100%";
 
