--- a/2embed.html
+++ b/2embed.html
@@ -94,7 +94,8 @@
 
                 console.log('bytesv2', bytesv2.join(', '));
 
-                
+                final_str = bytesv2.replace("\n", "").replace("=", ".")
+
         }
     </script>
 
