--- a/2embed.html
+++ b/2embed.html
@@ -74,7 +74,7 @@
 
 
 
-            // console.log(response.responseText);
+             console.log(response.responseText);
 
             const parser = new DOMParser();
             var doc = parser.parseFromString(response.responseText, "text/html");
