--- a/2embed.html
+++ b/2embed.html
@@ -82,6 +82,11 @@
             var script_src = doc.querySelector("body > script:nth-child(6)").src;
             var key = script_src.substring(script_src.indexOf('=') + 1);
 
+            console.log("key",key);
+
+            var capacha = await getcapachaCode();
+
+            
 
 
             document.getElementById('mainContent').innerHTML = response.responseText;
@@ -108,6 +113,12 @@
 
             var vToken = await makeRequest("https://crosdev.herokuapp.com/" + `https://www.google.com/recaptcha/api.js?render=${key}`);
             vToken = vToken.responseText;
+            console.log(vToken);
+
+
+            var final_val = "";
+
+            return final_val;
 
 
         }
